--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,8 @@
     --hover-color: #FF6C00;
     --dark-color: rgba(157, 164, 189, 0.6);
     --text-light-color: #9DA4BD;
-
+    --slider-bg-color: rgba(25, 28, 38, 0.2);
+    --btn-dark-color: #303030;
 }
 
 
@@ -12,122 +13,107 @@ body {
     font-family: 'Open Sans';
 }
 
-.btn {
-font-weight: 600;
-font-size: 12px;
-line-height: calc(16 / 12);
-letter-spacing: 0.09em;
-text-transform: uppercase;
-color: var(--main-color);
-background-color: transparent;
-border: 1px solid var(--hover-color);
-border-radius: 25px;
-padding: 12px 20px;
+.btn, .btn-light, .btn-dark {
+    font-weight: 600;
+    font-size: 12px;
+    line-height: calc(16 / 12);
+    letter-spacing: 0.09em;
+    text-transform: uppercase;    
+    background-color: transparent;
+    border: 1px solid var(--hover-color);
+    border-radius: 25px;
+    padding: 12px 20px;
 }
 
+.btn-light {color: var(--main-color);}
+
+.btn-dark {color: var(--btn-dark-color);}
+
 .header-link {
-text-decoration: none;
-font-weight: 600;
-font-size: 12px;
-line-height: calc(16 / 12);
-letter-spacing: 0.1em;
-color: var(--main-color);
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: calc(16 / 12);
+    letter-spacing: 0.1em;
+    color: var(--main-color);
 }
 
 .header-link:hover {
     color: var(--hover-color);
 }
 
+.hero-content {
+    background-color: var(--slider-bg-color);
+    background-image: url(../image/slider/slider1.jpg);
+    background-repeat: no-repeat;
+}
+
 .uppertitle-dark {
-font-weight: 600;
-font-size: 11px;
-line-height: calk(15 / 11);
-letter-spacing: 0.1em;
-text-transform: uppercase;
-color: var(--dark-color);
+    font-weight: 600;
+    font-size: 11px;
+    line-height: calk(15 / 11);
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: var(--dark-color);
 }
 
 .hero-title {
-font-family: 'Raleway';
-font-weight: 700;
-font-size: 72px;
-line-height: calc(85 / 72);
-letter-spacing: 0.05em;
-color: var(--main-color);
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 72px;
+    line-height: calc(85 / 72);
+    letter-spacing: 0.05em;
+    color: var(--main-color);
 }
 
 .hero-subtitle {
-font-size: 18px;
-line-height: calk(30 / 18);
-letter-spacing: 0.02em;
-color: var(--text-light-color);
+    font-size: 18px;
+    line-height: calk(30 / 18);
+    letter-spacing: 0.02em;
+    color: var(--text-light-color);
 }
 
-.header { background-color: teal;
-}
-.nav {
-}
-.logo {
-}
-.list {list-style: none;
-}
-.list-item {
+.nav {}
+
+.logo {}
+
+.list {
+    list-style: none;
 }
 
+.list-item {}
 
-.header-group {
-}
+
+.header-group {}
 
 
 
-.about-btn {color: #303030;}
+.subtitle {}
 
-.hero {background-image: url(../image/slider.jpg); background-color: #000; width: 1070px; height: 680px;}
-.section {
-}
+.group .section-title {}
 
+.text {}
 
+.Services {}
 
+.prices {}
 
+.benefits-number {}
 
+.sup {}
 
+.benefits-item {}
 
+.img {}
 
-.subtitle {
-}
-.group 
-.section-title {
-}
-.text {
-}
+.socials {}
 
-.services-section {background-image: url(../image/services.svg); background-color: #000; width: 1070px; height: 680px;}
-.section }
+.socials-item {}
 
-.Services {
-}
-.prices {
-}
-.benefits-number {
-}
-.sup {
-}
-.benefits-item {
-}
-.img {
-}
-.socials {
-}
-.socials-item {
-}
-.socials-link {
-}
+.socials-link {}
 
-.form-section {background-color: #191C26;}
+.contacts-adress {}
 
-.contacts-adress {
-}
-.map {
-}
-.footer-contact {
-}
+.map {}
+
+.footer-contact {}
