--- a/css/styles.css
+++ b/css/styles.css
@@ -1,33 +1,61 @@
 :root {
     --main-color: #ffffff;
-    --hover-color: #FF6C00;
-    --dark-color: rgba(157, 164, 189, 0.6);
-    --text-light-color: #9DA4BD;
+    --hover-color: #ff6c00;
+    --uppertitle-dark: rgba(157, 164, 189, 0.6);
+    --text-light-color: #9da4bd;
+    --text-dark-color: #555555;
     --slider-bg-color: rgba(25, 28, 38, 0.2);
-    --btn-dark-color: #303030;
+    --dark-color: #303030;
+    --free-color: transparent;
+    --services-bg-color: #111319;
+    --benefit-bg-color: #f7f7f7;
 }
-
 
 body {
     background-color: var(--main-color);
     font-family: 'Open Sans';
 }
 
-.btn, .btn-light, .btn-dark {
+.btn,
+.btn-light,
+.btn-dark {
     font-weight: 600;
     font-size: 12px;
     line-height: calc(16 / 12);
     letter-spacing: 0.09em;
-    text-transform: uppercase;    
-    background-color: transparent;
+    text-transform: uppercase;
+    min-width: 160px;
+    background-color: var(--free-color);
     border: 1px solid var(--hover-color);
     border-radius: 25px;
     padding: 12px 20px;
 }
 
-.btn-light {color: var(--main-color);}
+.btn-light {
+    color: var(--main-color);
+}
 
-.btn-dark {color: var(--btn-dark-color);}
+.btn-dark {
+    color: var(--dark-color);
+}
+
+.btn:hover,
+.btn:focus,
+.btn-light:hover,
+.btn-light:focus,
+.btn-dark:hover,
+.btn-dark:focus {
+    background-color: var(--hover-color);
+    color: var(--main-color);
+}
+
+.list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+/* Hero and Header */
 
 .header-link {
     text-decoration: none;
@@ -73,47 +101,109 @@ body {
     color: var(--text-light-color);
 }
 
-.nav {}
-
-.logo {}
-
-.list {
-    list-style: none;
+.link {
+    color: var(--dark-color);
+    text-decoration: none;
 }
 
-.list-item {}
+.link:hover,
+.link:focus {
+    color: var(--hover-color);
+}
 
+/* About */
 
-.header-group {}
+.uppertitle {
+    font-weight: 600;
+    font-size: 11px;
+    line-height: calc(15 / 11);
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: var(--dark-color);
+}
 
+.title-dark,
+.title-light {
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 42px;
+    line-height: calc(49 / 42);
+    letter-spacing: 0.05em;
+}
 
+.title-dark {
+    color: var(--dark-color);
+}
 
-.subtitle {}
+.title-light {
+    color: var(--main-color);
+}
 
-.group .section-title {}
+.subtitle {
+    font-size: 18px;
+    line-height: calc(30 / 18);
+    letter-spacing: 0.02em;
+    color: var(--text-dark-color);
+}
 
-.text {}
+.text-about {
+    font-size: 14px;
+    line-height: calc(26 / 14);
+    letter-spacing: 0.02em;
+    color: var(--text-dark-color);
+}
 
-.Services {}
+/* Services and prices */
 
-.prices {}
+.services-prices {
+    background-color: var(--services-bg-color);
+    background-image: url(../image/prices.svg);
+    background-repeat: no-repeat;
+}
 
-.benefits-number {}
+.uppertitle-dark {
+    color: var(--uppertitle-dark);
+}
 
-.sup {}
+.list.services,
+.list.prices {
+    font-size: 18px;
+    line-height: calc(30 / 18);
+    letter-spacing: 0.02em;
+    color: var(--text-light-color);
+}
 
-.benefits-item {}
+.price {
+    text-align: right;
+}
 
-.img {}
+/* Benefits */
 
-.socials {}
+.benefit {
+    color: var(--benefit-bg-color);
+}
 
-.socials-item {}
+.benefits-number {
+    font-weight: 700;
+    font-size: 42px;
+    line-height: calc(57 / 42);
+    text-align: center;
+    letter-spacing: 0.05em;
+    color: var(--dark-color);
+}
 
-.socials-link {}
+.sup {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: calc(22 / 16);
+    text-align: center;
+    color: var(--hover-color);
+}
 
-.contacts-adress {}
-
-.map {}
-
-.footer-contact {}
+.benefits-item {
+    font-weight: 600;
+    font-size: 11px;
+    line-height: calc(15 / 11);
+    text-align: center;
+    color: var(--dark-color);
+}
