--- a/css/styles.css
+++ b/css/styles.css
@@ -70,11 +70,7 @@ p {
     color: var(--main-color);
 }
 
-.list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
+
 
 /* Hero and Header */
 
@@ -122,6 +118,13 @@ p {
     color: var(--text-light-color);
 }
 
+.link-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+}
+
 .link {
     color: var(--dark-color);
     text-decoration: none;
@@ -134,11 +137,18 @@ p {
 
 /* About */
 
-.list {
+.list-about {
     list-style: none;
     padding: 0;
     margin: 0;
     display: flex;
+}
+
+.list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    
 }
 
 .list-item:not(:last-child) {
@@ -298,14 +308,23 @@ p {
 
 /* contacts */
 
-.form {
+.double-section {display: flex; 
     background-color: var(--contacts-bg-color);
 }
 
+.form-cont {
+    padding-top: 130px;
+  padding-bottom: 130px;
+  width: 585px;
+}
+
 .contacts {
-    background-color: var(--contacts-bg-color);
     background-image: url(../image/bg.svg);
     background-repeat: no-repeat;
+    width: 585px;
+    padding-left: 100px;
+    padding-bottom: 130px;
+    padding-top: 130px;
 }
 
 .contact {
@@ -315,6 +334,16 @@ p {
     letter-spacing: 0.02em;
     color: var(--text-light-color);
     text-decoration: none;
+}
+
+.contact-list {
+    margin: 0;
+    padding-left: 0;
+    list-style: none;
+    padding-bottom: 70px;}
+
+.contact-list-item:not(:last-child) {
+    padding-bottom: 20px;
 }
 
 .hours-title {
