--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,46 @@ section {
 
 /* Hero and Header */
 
+.top-bg {
+    margin-left: auto;
+    margin-right: auto;
+    width: 1170px;
+    background-color: var(--slider-bg-color);
+    background-image: url(../image/slider/slider1.jpg);
+    background-repeat: no-repeat;
+    background-position: right;
+    padding-top: 0;
+}
+
+.header {
+    display: flex;
+    /* padding-top: 32px; */
+    align-items: center;
+}
+
+.list-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.header-group {
+    /* display: flex; */
+    /* margin-left: auto; */
+    /*  */
+}
+
+.logo {
+    /* padding-top: 16px; */
+    margin-right: 70px;
+display: flex;}
+
+.nav {
+    display: flex;
+    margin-left: auto;
+    list-style: none;
+    padding-left: 0;
+    margin-right: 300px;
+}
+
 .header-link {
     text-decoration: none;
     font-weight: 600;
@@ -78,17 +118,15 @@ section {
     line-height: calc(16 / 12);
     letter-spacing: 0.1em;
     color: var(--main-color);
+    display: flex;
+/* margin-right: 15x; */
 }
 
 .header-link:hover {
     color: var(--hover-color);
 }
 
-.hero-content {
-    background-color: var(--slider-bg-color);
-    background-image: url(../image/slider/slider1.jpg);
-    background-repeat: no-repeat;
-}
+.btn-light.head {margin-left: 40px; display: flex; }
 
 .uppertitle-dark {
     font-weight: 600;
@@ -140,6 +178,10 @@ section {
 }
 
 /* About */
+
+.cont-ab {
+    display: flex;
+}
 
 .list-item:not(:last-child) {
     margin-right: 30px;
@@ -260,13 +302,8 @@ section {
 }
 
 .btn-light {
-    /* display: flex; */
-    /* display: block; */
-    /* display: inline-flex; */
-    /* display: inline-block; */
-    text-align: center;
-    /* justify-content: center; */
-   }
+    margin-left: 505px;
+}
 
 /* Benefits */
 
@@ -453,6 +490,24 @@ section {
 .contact:hover,
 .contact:focus {
     color: var(--hover-color);
+}
+.btn-light-down {font-weight: 600;
+    font-size: 12px;
+    line-height: calc(16 / 12);
+    letter-spacing: 0.09em;
+    text-transform: uppercase;
+    min-width: 160px;
+    background-color: var(--free-color);
+    border: 1px solid var(--hover-color);
+    border-radius: 25px;
+    padding: 12px 20px;
+    color: var(--main-color);
+}
+
+.btn-light-down:hover,
+.btn-light-down:focus {
+    background-color: var(--hover-color);
+    color: var(--main-color);
 }
 
 /* Footer */
