--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ p {
     padding: 0 15px;
 }
 
-section {
+.section {
     padding-bottom: 130px;
     padding-top: 130px;
 }
@@ -71,25 +71,32 @@ section {
 
 /* Hero and Header */
 
-.top-bg {
-    margin-left: auto;
-    margin-right: auto;
-    width: 1170px;
-    background-color: var(--slider-bg-color);
-    background-image: url(../image/slider/slider1.jpg);
+.bg-img {
+    position: relative;
+    height: 680px;
+    background-color: var(--main-color);
+    background-image: url(../image/slider/slider3.jpg);
     background-repeat: no-repeat;
     background-position: right;
-    padding-top: 0;
 }
 
 .header {
+    position: absolute;
+    top: 32px;
+    right: 10px;
+    width: 1160px;
     display: flex;
-    /* padding-top: 32px; */
     align-items: center;
 }
 
+.hero-content {
+    position: absolute;
+    top: 272px;
+    left: 198px;
+}
+
 .list-item:not(:last-child) {
-  margin-right: 30px;
+    margin-right: 30px;
 }
 
 .header-group {
@@ -99,9 +106,10 @@ section {
 }
 
 .logo {
-    /* padding-top: 16px; */
-    margin-right: 70px;
-display: flex;}
+    width: 68px;
+    height: 55px;
+    fill: var(--dark-color);
+}
 
 .nav {
     display: flex;
@@ -119,14 +127,17 @@ display: flex;}
     letter-spacing: 0.1em;
     color: var(--main-color);
     display: flex;
-/* margin-right: 15x; */
+    /* margin-right: 15x; */
 }
 
 .header-link:hover {
     color: var(--hover-color);
 }
 
-.btn-light.head {margin-left: 40px; display: flex; }
+.btn-light.head {
+    margin-left: 40px;
+    display: flex;
+}
 
 .uppertitle-dark {
     font-weight: 600;
@@ -151,6 +162,14 @@ display: flex;}
     line-height: calk(30 / 18);
     letter-spacing: 0.02em;
     color: var(--text-light-color);
+}
+
+.left-group {
+    position: absolute;
+    left: 0;
+    top: 370px;
+    transform: rotate(-90deg);
+    padding-bottom: 58px;
 }
 
 .link-list {
@@ -491,7 +510,9 @@ display: flex;}
 .contact:focus {
     color: var(--hover-color);
 }
-.btn-light-down {font-weight: 600;
+
+.btn-light-down {
+    font-weight: 600;
     font-size: 12px;
     line-height: calc(16 / 12);
     letter-spacing: 0.09em;
