--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,8 @@
     --services-bg-color: #111319;
     --barbers-bg-color: #f7f7f7;
     --contacts-bg-color: #191C26;
-    /* --light-line-color: rgba(157, 164, 189, 0.6); */
+    --grow-line-color: rgba(157, 164, 189, 0.12);
+    
 }
 
 body {
@@ -175,7 +176,7 @@ p {
 }
 
 .btn-slider {
-    display: flex;
+display: flex;
 width: 68px;
 height: 24px;
 font-weight: 600;
@@ -187,7 +188,6 @@ background-color: var(--free-color);
 border: none;
 cursor: pointer;
 padding: 0;
-
 }
 
 .btn-slider::after {
@@ -361,11 +361,12 @@ margin-right: 22px;
 }
 
 .services-prices {
-    background-image: url(../image/prices.svg);
+    background-image: url(../image/price-bg.svg);
     background-repeat: no-repeat;
     margin-left: auto;
     margin-right: auto;
-    width: 1200px;
+    width: 1280px;
+    height: 718px;
 }
 
 .uppertitle-dark {
@@ -382,13 +383,7 @@ margin-right: 22px;
     padding: 30px 40px;
     margin: 0;
     width: 585px;
-}
-
-.line2 {
-    margin-top: 25px;
-    margin-right: 6px;
-    margin-left: auto;
-    display: inline-block;
+    height: 240px;
 }
 
 .left-list {
@@ -400,17 +395,33 @@ margin-right: 22px;
 }
 
 .service {
-    display: inline-flex;
-    text-align: justify;
+    display: flex;  
+       align-items: baseline;
+  gap: 12px;  
+    margin-bottom: 20px;
 }
 
-.price {
+.service::before {
+  content: '';
+  display: block;
+  height: 1px;
+  flex-grow: 1;
+  background-color: var(--grow-line-color);
+}
+
+.prices {
     display: flex;
     margin-bottom: 50px;
 }
 
+.price {
+  order: -1;
+}
+
 .btn-light {
-    margin-left: 505px;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Benefits */
@@ -519,11 +530,25 @@ margin-right: 22px;
     margin: 0;
     display: flex;
     justify-content: center;
+    
+    
+}
+
+.socials-item {
+    width: 44px;
+    height: 44px;
+    fill: var(--dark-color);
 }
 
 .socials-item:not(:last-child) {
     margin-right: 10px;
 
+}
+
+.icon {
+    width: 20px;
+    height: 20px;
+    
 }
 
 /* Gallery */
