--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,8 @@
 :root {
+    /* fonts */
+    --main-font: 'Open Sans';
+    --second-font: 'Raleway';
+    /* colors */
     --main-color: #ffffff;
     --hover-color: #ff6c00;
     --uppertitle-dark: rgba(157, 164, 189, 0.6);
@@ -11,12 +15,16 @@
     --barbers-bg-color: #f7f7f7;
     --contacts-bg-color: #191C26;
     --grow-line-color: rgba(157, 164, 189, 0.12);
-    
+    /* others */
+    --benefits-shadows: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    --left-list-gradient: linear-gradient(180deg, #171A24 0%, rgba(23, 26, 36, 0.2) 100%);
+    --right-list-gradient: linear-gradient(180deg, #090B13 0%, rgba(9, 11, 19, 0.2) 100%);
+    --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
     background-color: var(--main-color);
-    font-family: 'Open Sans', sans-serif;
+    font-family: var(--main-font), sans-serif;
 }
 
 h1,
@@ -52,6 +60,9 @@ p {
     border-radius: 25px;
     padding: 12px 20px;
     cursor: pointer;
+    transition-property: color, background-color;
+    transition-duration: 250ms;
+    transition-timing-function: var(--timing-function);
 }
 
 .btn-light {
@@ -79,7 +90,7 @@ p {
 .hero {
     position: relative;
     top: 0;
-    left: 0;    
+    left: 0;
 }
 
 .bg-img {
@@ -97,6 +108,9 @@ p {
     width: 70px;
     height: 55px;
     fill: var(--dark-color);
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: var(--timing-function);
 }
 
 .logo:hover,
@@ -114,7 +128,7 @@ p {
 }
 
 .nav {
-    display: flex;    
+    display: flex;
     list-style: none;
     padding-left: 0;
     margin-right: 310px;
@@ -129,6 +143,9 @@ p {
     letter-spacing: 0.1em;
     color: var(--main-color);
     display: flex;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: var(--timing-function);
 }
 
 .header-link:hover,
@@ -141,7 +158,7 @@ p {
     display: flex;
 }
 
-.left-group {    
+.left-group {
     position: absolute;
     left: -70px;
     bottom: 169px;
@@ -158,7 +175,7 @@ p {
     content: '';
     display: block;
     height: 1px;
-    width: 60px;    
+    width: 60px;
     background-color: var(--dark-color);
 }
 
@@ -176,32 +193,38 @@ p {
 }
 
 .btn-slider {
-display: flex;
-width: 68px;
-height: 24px;
-font-weight: 600;
-font-size: 11px;
-line-height: calc(15 / 11);
-letter-spacing: 0.1em;
-color: var(--main-color);
-background-color: var(--free-color);
-border: none;
-cursor: pointer;
-padding: 0;
+    display: flex;
+    width: 68px;
+    height: 24px;
+    font-weight: 600;
+    font-size: 11px;
+    line-height: calc(15 / 11);
+    letter-spacing: 0.1em;
+    color: var(--main-color);
+    background-color: var(--free-color);
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: var(--timing-function);
 }
 
 .btn-slider::after {
     content: '';
     display: block;
-    height: 1px;    
+    height: 1px;
     background-color: var(--main-color);
     margin-top: 8px;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: var(--timing-function);
 }
 
 .back {
-display: block;
-text-align: left;
-margin-right: 22px;
+    display: block;
+    text-align: left;
+    margin-right: 22px;
 }
 
 .forward {
@@ -215,7 +238,7 @@ margin-right: 22px;
 }
 
 .btn-slider:hover::after,
-.btn-slider:focus::after {    
+.btn-slider:focus::after {
     background-color: var(--hover-color);
 }
 
@@ -229,21 +252,21 @@ margin-right: 22px;
     line-height: calk(15 / 11);
     letter-spacing: 0.1em;
     text-transform: uppercase;
-    color: var(--dark-color);  
-    padding-bottom: 20px;  
+    color: var(--dark-color);
+    padding-bottom: 20px;
 }
 
 .uppertitle-dark::before {
     content: '';
     display: block;
     height: 1px;
-    width: 60px;    
+    width: 60px;
     background-color: var(--uppertitle-dark);
     margin-right: 20px;
 }
 
 .hero-title {
-    font-family: 'Raleway';
+    font-family: var(--second-font);
     font-weight: 700;
     font-size: 72px;
     line-height: calc(85 / 72);
@@ -269,6 +292,9 @@ margin-right: 22px;
 .link {
     color: var(--dark-color);
     text-decoration: none;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: var(--timing-function);
 }
 
 .link:hover,
@@ -313,19 +339,19 @@ margin-right: 22px;
     content: '';
     display: block;
     height: 1px;
-    width: 60px;    
+    width: 60px;
     background-color: var(--uppertitle-dark);
     margin-right: 20px;
 }
 
 .title-dark,
 .title-light {
-    font-family: 'Raleway';
+    font-family: var(--second-font);
     font-weight: 700;
     font-size: 42px;
     line-height: calc(49 / 42);
     letter-spacing: 0.05em;
-    
+
 }
 
 .title-dark {
@@ -357,7 +383,7 @@ margin-right: 22px;
 /* Services and prices */
 
 .serv-img {
-    background-color: var(--services-bg-color);    
+    background-color: var(--services-bg-color);
 }
 
 .services-prices {
@@ -387,26 +413,26 @@ margin-right: 22px;
 }
 
 .left-list {
-    background: linear-gradient(180deg, #171A24 0%, rgba(23, 26, 36, 0.2) 100%);
+    background: var(--left-list-gradient);
 }
 
 .right-list {
-    background: linear-gradient(180deg, #090B13 0%, rgba(9, 11, 19, 0.2) 100%);
+    background: var(--right-list-gradient);
 }
 
 .service {
-    display: flex;  
-       align-items: baseline;
-  gap: 12px;  
+    display: flex;
+    align-items: baseline;
+    gap: 12px;
     margin-bottom: 20px;
 }
 
 .service::before {
-  content: '';
-  display: block;
-  height: 1px;
-  flex-grow: 1;
-  background-color: var(--grow-line-color);
+    content: '';
+    display: block;
+    height: 1px;
+    flex-grow: 1;
+    background-color: var(--grow-line-color);
 }
 
 .prices {
@@ -415,13 +441,13 @@ margin-right: 22px;
 }
 
 .price {
-  order: -1;
+    order: -1;
 }
 
 .btn-light {
     display: block;
-  margin-left: auto;
-  margin-right: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* Benefits */
@@ -444,6 +470,7 @@ margin-right: 22px;
     width: 170px;
     text-align: center;
     background-color: var(--barbers-bg-color);
+    box-shadow: var(--benefits-shadows);
 }
 
 .benefit {
@@ -530,25 +557,31 @@ margin-right: 22px;
     margin: 0;
     display: flex;
     justify-content: center;
-    
-    
+    gap: 10px;
 }
 
-.socials-item {
+.socials-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 44px;
     height: 44px;
+    background-color: var(--light-txt-cl);
+    border-radius: 50%;
     fill: var(--dark-color);
-}
-
-.socials-item:not(:last-child) {
-    margin-right: 10px;
-
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: var(--timing-function);
 }
 
 .icon {
     width: 20px;
     height: 20px;
-    
+}
+
+.socials-link:hover,
+.socials-link:focus {
+    fill: var(--hover-color);
 }
 
 /* Gallery */
@@ -566,26 +599,32 @@ margin-right: 22px;
     overflow: hidden;
 }
 
+.gallery {
+    gap: 30px;
+}
+
 /* contacts */
 
 .double-section {
     background-color: var(--contacts-bg-color);
 }
 
-.double {
+.double-section .container {
     display: flex;
 }
 
-.form-cont {
+.booking {
     padding-top: 130px;
     padding-bottom: 130px;
-    width: 585px;
+    width: 640px;
+    height: 644px;
 }
 
 .contacts {
-    background-image: url(../image/bg.svg);
+    width: 640px;
+    height: 644px;
+    background-image: url(../image/contacts-bg.svg);
     background-repeat: no-repeat;
-    width: 585px;
     padding-left: 100px;
     padding-bottom: 130px;
     padding-top: 130px;
@@ -598,6 +637,9 @@ margin-right: 22px;
     letter-spacing: 0.02em;
     color: var(--text-light-color);
     text-decoration: none;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: var(--timing-function);
 }
 
 .contact-list {
@@ -612,17 +654,36 @@ margin-right: 22px;
 }
 
 .hours-title {
+    display: flex;
+    align-items: center;
     font-weight: 600;
     font-size: 11px;
     line-height: calc(15 / 11);
     letter-spacing: 0.1em;
     text-transform: uppercase;
     color: var(--main-color);
+    margin-bottom: 20px;
+}
+
+.hours-title::before {
+    content: '';
+    display: block;
+    height: 1px;
+    width: 60px;
+    background-color: var(--uppertitle-dark);
+    margin-right: 20px;
 }
 
 .contact:hover,
 .contact:focus {
     color: var(--hover-color);
+}
+
+.time {
+    font-size: 18px;
+    line-height: calc(30 / 18);
+    letter-spacing: 0.02em;
+    color: var(--text-light-color);
 }
 
 .btn-light-down {
@@ -637,6 +698,10 @@ margin-right: 22px;
     border-radius: 25px;
     padding: 12px 20px;
     color: var(--main-color);
+    cursor: pointer;
+    transition-property: color, background-color;
+    transition-duration: 250ms;
+    transition-timing-function: var(--timing-function);
 }
 
 .btn-light-down:hover,
@@ -648,15 +713,30 @@ margin-right: 22px;
 /* Footer */
 
 .footer {
-    padding-top: 56px;
-    padding-bottom: 56px;
+    height: 127px;
+    align-items: center;
     display: flex;
 }
 
-
-.up-block-footer {
+.link-list-footer {
     display: flex;
+    align-items: center;
     margin-left: auto;
+    gap: 40px;
+    list-style: none;
+    font-weight: 600;
+    font-size: 11px;
+    line-height: calc(15 / 11);
+    letter-spacing: 0.2em;
+    color: var(--dark-color);
+}
+
+.link-list-footer::before {
+    content: '';
+    display: block;
+    height: 1px;
+    width: 60px;
+    background-color: var(--dark-color);
 }
 
 .copyright {
